--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -15,10 +15,10 @@ web_environment: []
 corepack_enable: false
 webimage_extra_packages: [jpegoptim, optipng, gifsicle, webp]
 web_extra_exposed_ports:
-    - name: craft-starter
-      container_port: 3000
-      http_port: 3001
-      https_port: 3000
+    - name: craft-vite
+      container_port: 5173
+      http_port: 5172
+      https_port: 5173
 
 # Key features of DDEV's config.yaml:
 
