--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
         "vite": "^6.1.0"
     },
     "dependencies": {
+        "@fancyapps/ui": "^5.0.36",
         "@tailwindcss/vite": "^4.0.6",
         "alpinejs": "^3.14.8",
-        "tailwindcss": "^4.0.6",
-        "swiper": "^11.1.14",
         "gsap": "npm:@gsap/shockingly@^3.12.5",
-        "@fancyapps/ui": "^5.0.36",
+        "swiper": "^11.1.14",
+        "tailwindcss": "^4.0.6",
+        "vite-plugin-compression": "^0.5.1",
         "vite-plugin-restart": "^0.4.2"
     }
 }
