--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "lint": "eslint src/ --ext .js,.ts",
+        "lint:fix": "eslint src/ --ext .js,.ts --fix",
+        "format": "prettier --write src/",
+        "format:check": "prettier --check src/",
+        "type-check": "tsc --noEmit",
+        "clean": "rm -rf web/dist node_modules/.vite",
+        "fresh": "npm run clean && npm install && npm run build"
     },
     "devDependencies": {
+        "@eslint/js": "^9.0.0",
+        "@types/alpinejs": "^3.13.0",
+        "eslint": "^9.0.0",
+        "prettier": "^3.0.0",
+        "typescript": "^5.3.0",
         "vite": "^6.3.5"
     },
     "dependencies": {
