--- a/config/project/project.yaml
+++ b/config/project/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1751397334
+dateModified: 1752262855
 email:
   fromEmail: $SYSTEM_EMAIL
   fromName: $SYSTEM_NAME
@@ -74,11 +74,11 @@ plugins:
     schemaVersion: 1.0.0
 system:
   edition: solo
-  live: true
+  live: $IS_SYSTEM_LIVE
   name: $SYSTEM_NAME
   retryDuration: null
   schemaVersion: 5.8.0.3
-  timeZone: America/Los_Angeles
+  timeZone: $TIMEZONE
 users:
   allowPublicRegistration: false
   defaultGroup: null
